--- a/app/src/main/res/layout/activity_select_school.xml
+++ b/app/src/main/res/layout/activity_select_school.xml
@@ -33,7 +33,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="@string/school"
+                android:text="@string/select_add_school"
                 android:textColor="@color/black"
                 android:textSize="18dp"
                 android:textStyle="bold" />
@@ -46,7 +46,8 @@
                 android:paddingEnd="@dimen/dimen_8"
                 android:text="@string/done"
                 android:textColor="@color/app_main_color"
-                android:textSize="13dp" />
+                android:textSize="13dp"
+                android:visibility="invisible"/>
 
 
         </LinearLayout>
@@ -61,55 +62,18 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/my_school_name"
-            android:textColor="@color/black"
-            android:textSize="24dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:background="@null"
-            android:hint="@string/my_school_name"
-            android:text=""
-            android:textColor="@color/app_main_color"
-            android:textSize="24dp" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="3dp"
-            android:background="@color/color_b7b7b7" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="44dp"
+            android:layout_height="@dimen/dimen_40"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:paddingHorizontal="16dp"
+            android:hint="@string/select_add_school_hint"
+            android:background="@drawable/shape_radius15_stroke1"/>
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/do_not_show"
-                android:textColor="@color/color_2e2e2e"
-                android:textSize="13dp"
-                android:textStyle="bold" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="6dp"/>
 
-            <tim.com.libnetwork.view.switchbuttom.SwitchButton
-                android:layout_width="65dp"
-                android:layout_height="31dp"
-                app:sb_checked="false"
-                app:sb_checked_color="@color/app_main_color"
-                app:sb_background="@color/color_b7b7b7"
-                app:sb_show_indicator="false" />
-        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
-
