--- a/app/src/main/res/layout/item_featured_event.xml
+++ b/app/src/main/res/layout/item_featured_event.xml
@@ -26,7 +26,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/imageView21"
+            android:id="@+id/iv_love"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_margin="12dp"
