--- a/app/src/main/res/layout/activity_add_new_event.xml
+++ b/app/src/main/res/layout/activity_add_new_event.xml
@@ -48,6 +48,7 @@
                 android:text="Name" />
 
             <com.hula.myapplication.widget.HuLaEditText
+                android:id="@+id/edit_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
@@ -64,7 +65,8 @@
                 android:layout_marginTop="16dp"
                 android:text="Location" />
 
-            <com.hula.myapplication.widget.HuLaTextView
+            <com.hula.myapplication.widget.HuLaEditText
+                android:id="@+id/edit_location_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
@@ -72,7 +74,7 @@
                 android:hint="Enter your event/activity address"
                 android:padding="15dp"
                 android:singleLine="true"
-                app:tv_hintStartDrawable="@mipmap/icon_location_hint_1" />
+                app:edit_hintStartDrawable="@mipmap/icon_location_hint_1" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -81,6 +83,7 @@
                 android:text="Category" />
 
             <com.hula.myapplication.widget.HuLaTextView
+                android:id="@+id/tv_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
@@ -98,15 +101,15 @@
                 android:text="Time" />
 
             <com.hula.myapplication.widget.HuLaTextView
+                android:id="@+id/tv_time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
                 android:background="@drawable/select_edit_bg"
-                android:drawableEnd="@mipmap/icon_right_1"
-                android:hint="Select your event/activity category"
+                android:hint="Select a time"
                 android:padding="15dp"
                 android:singleLine="true"
-                app:tv_hintStartDrawable="@mipmap/icon_time_hint" />
+                app:tv_hintStartDrawable="@mipmap/icon_clock" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -122,6 +125,7 @@
                 android:orientation="vertical">
 
                 <com.hula.myapplication.widget.HuLaEditText
+                    android:id="@+id/tv_des"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@null"
@@ -133,6 +137,7 @@
                     app:edit_hintStartDrawable="@mipmap/icon_description_hint" />
 
                 <TextView
+                    android:id="@+id/tv_des_limit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
@@ -174,6 +179,7 @@
                 android:text="Website Link" />
 
             <com.hula.myapplication.widget.HuLaEditText
+                android:id="@+id/edit_link"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
@@ -190,6 +196,7 @@
                 android:text="Ticket Price" />
 
             <com.hula.myapplication.widget.HuLaEditText
+                android:id="@+id/edit_price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
@@ -206,6 +213,7 @@
                 android:text="What do you create this event/activity for?" />
 
             <RadioGroup
+                android:id="@+id/group_radio"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -242,6 +250,7 @@
     </androidx.core.widget.NestedScrollView>
 
     <TextView
+        android:id="@+id/tv_submit"
         style="@style/defButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
