--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,6 +27,7 @@
                 android:orientation="horizontal">
 
                 <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/iv_header"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:elevation="5dp"
@@ -46,6 +47,7 @@
             </LinearLayout>
 
             <com.hula.myapplication.widget.HuLaActionBarMenu
+                android:id="@+id/menu_notice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/shape_oval_fff"
