--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,6 +15,17 @@
     </style>
 
 
+    <style name="Theme.Translucent" parent="@android:style/Theme.Translucent.NoTitleBar">
+        <item name="android:windowBackground">@drawable/shape_translucent</item>
+        <item name="android:windowIsTranslucent">true</item>
+<!--        <item name="android:windowNoTitle">true</item>-->
+        <item name="android:windowActionBar">false</item>
+        <item name="windowActionBar">false</item>
+<!--        <item name="windowNoTitle">true</item>-->
+
+    </style>
+
+
     <style name="AppTheme.HulaTheme" parent="AppTheme">
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorHint">#C4C4C4</item>
