--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="color_878787">#878787</color>
     <color name="color_2e2e2e">#2E2E2E</color>
     <color name="color_5C5C5C">#5C5C5C</color>
+    <color name="color_B6B6B6">#B6B6B6</color>
     <color name="color_b7b7b7">#b7b7b7</color>
     <color name="color_d351a4">#D351A4</color>
     <color name="start" tools:ignore="MissingDefaultResource">#2D3F51B5</color>
