--- a/app/src/main/res/layout/home_item_featured_event.xml
+++ b/app/src/main/res/layout/home_item_featured_event.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -10,22 +11,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        tools:text="Featured Event"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:text="Featured Event" />
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:layout_marginTop="8dp">
+        android:layout_marginTop="8dp"
+        android:orientation="vertical">
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             tools:itemCount="1"
             tools:listitem="@layout/item_featured_event" />
-    </FrameLayout>
+
+        <com.rd.PageIndicatorView
+            android:paddingVertical="8dp"
+            android:id="@+id/pageIndicatorView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:piv_animationType="color"
+            app:piv_dynamicCount="true"
+            app:piv_radius="4dp"
+            app:piv_interactiveAnimation="true"
+            app:piv_selectedColor="#835EE2"
+            app:piv_unselectedColor="#A6A6A6"/>
+    </LinearLayout>
 
 
 </LinearLayout>
