--- a/app/src/main/res/layout/adapter_event_attend.xml
+++ b/app/src/main/res/layout/adapter_event_attend.xml
@@ -1,34 +1,57 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:layout_marginEnd="8dp"
+<com.hula.myapplication.widget.ShapeableFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:gravity="center_horizontal"
+    android:layout_width="120dp"
+    android:layout_height="135dp"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    android:layout_marginEnd="8dp"
+    app:shapeAppearance="@style/RoundedStyle20">
 
     <RelativeLayout
-        android:layout_width="108dp"
-        android:layout_height="108dp"
-        android:background="@drawable/shape_oval_main"
-        android:padding="4dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <com.hula.myapplication.widget.WHImageView
+        <ImageView
             android:id="@+id/iv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:shapeAppearance="@style/CircleStyle" />
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <LinearLayout
+            android:id="@+id/layout_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="-1dp"
+            android:background="#88000000"
+            android:padding="10dp">
+
+            <TextView
+                android:id="@+id/tv_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableStart="@mipmap/icon_bookmark"
+                android:drawablePadding="5dp"
+                android:textColor="@color/white"
+                android:textSize="10sp"
+                tools:text="TextView" />
+
+            <TextView
+                android:id="@+id/tv_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                tools:text="TextView" />
+
+        </LinearLayout>
 
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="9dp"
-        android:maxLines="1"
-        android:textColor="@color/color_2e2e2e"
-        tools:text="Henna DIY" />
-
-</LinearLayout>
+</com.hula.myapplication.widget.ShapeableFrameLayout>
