--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,6 +30,7 @@
                     android:id="@+id/iv_header"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:scaleType="centerCrop"
                     android:elevation="5dp"
                     android:src="@mipmap/icon_persion_null"
                     app:shapeAppearance="@style/CircleStyle" />
