--- a/app/src/main/res/layout/activity_login_phone.xml
+++ b/app/src/main/res/layout/activity_login_phone.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:background="@drawable/shape_def_windowbg">
+    android:background="@drawable/shape_def_windowbg"
+    android:fitsSystemWindows="true">
 
     <com.hula.myapplication.widget.HuLaActionBar
         android:id="@+id/huLaActionBar"
@@ -45,7 +45,6 @@
         app:layout_constraintTop_toBottomOf="@+id/huLaActionBar" />
 
     <TextView
-        android:minEms="4"
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -53,6 +52,7 @@
         android:background="@drawable/shape_radius15_stroke1_8e73d3"
         android:drawablePadding="5dp"
         android:gravity="center"
+        android:minEms="4"
         android:padding="15dp"
         android:text="US +1"
         android:textColor="#8E73D3"
@@ -60,6 +60,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <EditText
+        android:maxLength="10"
         android:id="@+id/edit_phone"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -91,8 +92,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
-        android:background="@drawable/shape_radius100_8e73d3"
-        android:backgroundTint="#C4C4C4"
+        android:background="@drawable/selector_send_code"
+        android:enabled="false"
         android:paddingHorizontal="10dp"
         android:paddingVertical="5dp"
         android:text="Send Code"
@@ -103,9 +104,9 @@
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_marginTop="45dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="45dp"
         android:text="Verification code"
         app:layout_constraintStart_toStartOf="@+id/tv_send"
         app:layout_constraintTop_toBottomOf="@+id/tv_send" />
@@ -114,7 +115,6 @@
         android:id="@+id/tv_phone_hint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Code sent to +1 234 567-8900"
         android:textColor="#5C5C5C"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/textView9"
@@ -142,12 +142,12 @@
         app:layout_constraintTop_toBottomOf="@+id/edit_vc" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/tv_resend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:autoLink="all"
         android:paddingVertical="5dp"
         android:text="@string/resend_code"
-        android:autoLink="all"
         android:textColor="#835EE2"
         app:layout_constraintBottom_toBottomOf="@+id/textView11"
         app:layout_constraintStart_toEndOf="@+id/textView11"
@@ -160,6 +160,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:paddingHorizontal="71dp"
+        android:enabled="false"
         android:text="Continue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
