--- a/app/src/main/res/layout/adapter_setting_profile.xml
+++ b/app/src/main/res/layout/adapter_setting_profile.xml
@@ -22,7 +22,8 @@
         <ImageView
             android:id="@+id/iv"
             android:layout_width="24dp"
-            android:layout_height="24dp" />
+            android:layout_height="24dp"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/tv"
