--- a/app/src/main/res/layout/activity_register_email.xml
+++ b/app/src/main/res/layout/activity_register_email.xml
@@ -18,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:visibility="invisible"
             android:id="@+id/tv_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
