--- a/app/src/main/res/layout/activity_register_notification.xml
+++ b/app/src/main/res/layout/activity_register_notification.xml
@@ -12,15 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         app:acb_enableBack="false"
-        app:acb_title="">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_marginEnd="10dp"
-            android:src="@mipmap/icon_step_2" />
-    </com.hula.myapplication.widget.HuLaActionBar>
+        app:acb_title=""/>
 
 
     <TextView
